fix issue with unique post slugs
post slugs must be uniques with a specific blog, but can be the same in different blogs.  added proper friendly_id scoping and adjusted controllers and routes.

--- a/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
@@ -9,11 +9,11 @@
         <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><%= icons(:gear) %> <span class="caret"></span></button>
         <ul class="dropdown-menu dropdown-menu-right icons-right">
           <% if @post.notification_sent_on.nil? %>
-            <li><%= link_to 'Send Notification Emails', send_notifications_emails_admin_cms_post_path(@post), method: :put, data: {confirm: 'This will send a post notification email to each user of this blog.  Are you sure?'} %></li>
+            <li><%= link_to 'Send Notification Emails', send_notifications_emails_admin_cms_blog_cms_post_path(@blog, @post), method: :put, data: {confirm: 'This will send a post notification email to each user of this blog.  Are you sure?'} %></li>
           <% else %>
-            <li><%= link_to 'Re-Send Notification Emails', send_notifications_emails_admin_cms_post_path(@post), method: :put, data: {confirm: "WARNING: An email was already sent on #{format_datetime(@post.notification_sent_on)}.  Are you sure you want to send another?"} %></li>
+            <li><%= link_to 'Re-Send Notification Emails', send_notifications_emails_admin_cms_blog_cms_post_path(@blog, @post), method: :put, data: {confirm: "WARNING: An email was already sent on #{format_datetime(@post.notification_sent_on)}.  Are you sure you want to send another?"} %></li>
           <% end %>
-          <li><%= link_to 'Send Test Email', send_notifications_emails_admin_cms_post_path(@post, test: true), method: :put, data: {confirm: 'This will send a test post notification email to your email account.  Are you sure?'} %></li>
+          <li><%= link_to 'Send Test Email', send_notifications_emails_admin_cms_blog_cms_post_path(@blog, @post, test: true), method: :put, data: {confirm: 'This will send a test post notification email to your email account.  Are you sure?'} %></li>
           <li><%= link_to 'Clear Facebook Cache', "https://developers.facebook.com/tools/debug/og/object?q=#{ERB::Util.url_encode(dm_cms.post_show_url(@post.cms_blog.slug, @post.slug))}", target: '_blank' %></li>            
         </ul>
       </div>
@@ -23,7 +23,7 @@
   <% content_for :content_title, @blog.title %>
 <% end %>
 
-<% submit_url = (@post.new_record? ? admin_cms_blog_cms_posts_path(@blog) : admin_cms_post_path) %>
+<% submit_url = (@post.new_record? ? admin_cms_blog_cms_posts_path(@blog) : admin_cms_blog_cms_post_path(@blog, @post)) %>
 <%= simple_form_for @post, url: submit_url,
     html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings do |f| %>
 
@@ -51,7 +51,7 @@
     <%= f.input :featured_image, label: 'Featured Image', id: 'image_error' %>
     <%= f.input :comments_allowed, as: :boolean, label: 'Allow Comments', hint: 'Turn on if you want commenting for this post.' %>
 
-    <%= submit_or_cancel cancel_url: admin_cms_blog_path(@blog), delete_url: ([:admin, @post] unless @post.new_record?), delete_confirm: 'Are you sure you wish to delete this post?  All comments will also be deleted!' %>
+    <%= submit_or_cancel cancel_url: admin_cms_blog_path(@blog), delete_url: ([:admin, @blog, @post] unless @post.new_record?), delete_confirm: 'Are you sure you wish to delete this post?  All comments will also be deleted!' %>
 
   <% end %>
 <% end %>
