--- a/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
@@ -25,7 +25,7 @@
             <% present post do |post_presenter| %>
               <tr class="item" data-item_id="<%= post.id %>">
                 <td>
-                  <%= link_to(post.title, edit_admin_cms_post_path(post)) %>
+                  <%= link_to(post.title, edit_admin_cms_blog_cms_post_path(@blog, post)) %>
                 </td>
                 <td>
                   <% if post.notification_sent_on %>
