--- a/cms/app/views/dm_cms/admin/media_files/index.html.erb
+++ b/cms/app/views/dm_cms/admin/media_files/index.html.erb
@@ -10,38 +10,88 @@
       <%= link_to content_tag(:span, tag, class: "tag #{active_tag}"), admin_media_files_path(filter: tag) %>
     <% end %>
   </div>
-  
-  <% @media_files.each_slice(4) do |media_chunk| %>
-    <div class="row">
-      <% media_chunk.each do |media_file| %>
-        <div class="col-lg-3 col-md-3 col-sm-3">
-          <div class="block">
-            <div class="thumbnailx thumbnail-boxed">
-              <% if media_file.image? or media_file.pdf? %>
-                <%= link_to image_tag(media_file.media_url(:thumb), width: '100%'), media_file.media_url, class: 'thumbnail lightbox' %>
-              <% else %>
-                <%= link_to media_file.media_url do %>
-                <div class="aspect_wrapper_square">
-                  <div class="thumbnail_extension_thumb">
-                    <span><%= media_file.media.file.extension %></span>
+
+  <div class="tabbable">
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#list_tab" data-toggle="tab">List</a></li>
+      <li><a href="#grid_tab" data-toggle="tab">Grid</a></li>
+    </ul>
+
+    <div class="tab-content with-padding">
+
+      <%#--- List Tab %>
+      <div class="tab-pane fade in active" id="list_tab">
+        <table class="table table-bordered table-hover">
+          <tbody>
+            <% @media_files.each do |media_file| %>
+              <tr>
+                <td style="width: 150px;">
+                  <% if media_file.image? or media_file.pdf? %>
+                    <%= link_to image_tag(media_file.media_url(:thumb)), media_file.media_url, class: 'thumbnail lightbox' %>
+                  <% else %>
+                    <%= link_to media_file.media_url do %>
+                    <div class="aspect_wrapper_square">
+                      <div class="thumbnail_extension_thumb">
+                        <span><%= media_file.media.file.extension %></span>
+                      </div>
+                    </div>
+                    <% end %>
+                  <% end %>
+                </td>
+                <td>
+                  <div class="media">
+                    <div class="media-body">
+                      <%= media_file.media.file.filename %>
+                      <ul class="headline-info" style="margin-right: 150px;">
+                        <li><%= format_datetime media_file.created_at %></li>
+                      </ul>
+                      <div class="media-footer"><span class="text-info">Publication:</span> footer_text</div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+
+      <%#--- Grid Tab %>
+      <div class="tab-pane fade" id="grid_tab">
+        <% @media_files.each_slice(4) do |media_chunk| %>
+          <div class="row">
+            <% media_chunk.each do |media_file| %>
+              <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="block">
+                  <div class="thumbnailx thumbnail-boxed">
+                    <% if media_file.image? or media_file.pdf? %>
+                      <%= link_to image_tag(media_file.media_url(:thumb), width: '100%'), media_file.media_url, class: 'thumbnail lightbox' %>
+                    <% else %>
+                      <%= link_to media_file.media_url do %>
+                      <div class="aspect_wrapper_square">
+                        <div class="thumbnail_extension_thumb">
+                          <span><%= media_file.media.file.extension %></span>
+                        </div>
+                      </div>
+                      <% end %>
+                    <% end %>
+                    <div class="caption">
+                      <h6 style="word-wrap: break-word;text-align:center;margin-top:0px;"><%= media_file.media.file.filename %></h6>
+                      <%= link_to icons(:edit), edit_admin_media_file_path(media_file), class: "btn btn-link btn-icon" %>
+                    </div>
                   </div>
                 </div>
-                <% end %>
-              <% end %>
-              <div class="caption">
-                <h6 style="word-wrap: break-word;text-align:center;margin-top:0px;"><%= media_file.media.file.filename %></h6>
-                <%= link_to icons(:edit), edit_admin_media_file_path(media_file), class: "btn btn-link btn-icon" %>
               </div>
-            </div>
+            <% end %>
           </div>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
+        <% end %>
 
-  <div class="row">
-    <div class='col-md-12'>
-      <%= will_paginate(@media_files, inner_window: 10, next_label: 'Next', previous_label: 'Prev', renderer: WillPaginate::AdminThemeRenderer) %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class='col-md-12'>
+        <%= will_paginate(@media_files, inner_window: 10, next_label: 'Next', previous_label: 'Prev', renderer: WillPaginate::AdminThemeRenderer) %>
+      </div>
     </div>
   </div>
 <% end %>
