--- a/cms/app/views/dm_cms/shared/_social_buttons.html.erb
+++ b/cms/app/views/dm_cms/shared/_social_buttons.html.erb
@@ -1,8 +1,7 @@
 <%#--- dynamcially loaded buttons %>
-<% url = request.original_url if !defined?(url) %>
+<% byebug %>
+<% url = request.original_url if !defined?(url) || url.nil? %>
 <div class="page_social_buttons clearfix">
   <div class="fb-like" data-href="<%= url %>" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-  <%= link_to('Tweet', '//twitter.com/intent/tweet', class: "twitter-share-button",
-        data: { url: url, lang: I18n.locale })
-  %>
+  <%= link_to('Tweet', '//twitter.com/intent/tweet', class: "twitter-share-button", data: { url: url, lang: I18n.locale }) %>
 </div>
